--- a/Inventory/Views/Barang/Edit.cshtml
+++ b/Inventory/Views/Barang/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-12">
         <section>
             <form id="createForm" asp-action="Edit" class="m-form m-form--label-align-right m-form--state" enctype="multipart/form-data">
-                <input asp-for="IdBarang" hidden/>
+                <input id="IdBarang" asp-for="IdBarang"  hidden/>
                 <div class="form-group m-form__group row">
                     <label class="col-form-label col-lg-3 col-sm-12">
                         Name :
