--- a/Inventory/Views/Shared/_LoginPartial.cshtml
+++ b/Inventory/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,7 @@
 @inject SignInManager<Authentication> SignInManager
 @inject UserManager<Authentication> UserManager
 
-<ul class="navbar-nav">
+@*<ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li>
@@ -25,4 +25,4 @@ else
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
-</ul>
+</ul>*@
